frontend/tests/cases/positive/interfaces/instances/instanceDependentKindInConstraint.gr
interface Dep (c : Coeffect) (i : c) a

instance {Dep Nat 2 a} => Dep Nat 1 a
